# SatelliteTracker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: sample_tles.txt
docs/: architecture.md
src/: __init__.py
src/analysis/: __init__.py  comparator.py
src/prediction/: __init__.py  pass_predictor.py
src/tracking/: satellite_tracker.py  tle_parser.py
src/utils/: __init__.py  orbital.py
src/visualization/: __init__.py  dashboard.py  globe.py
tests/: test_comparator.py  test_orbital.py  test_pass_predictor.py  test_satellite_tracker.py  test_tle_parser.py
